--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Leandro Silva Pereira</title>
 </head>
 <body>
-    <h1>Leandro - First project</h1>
+    <h1>First project in byu - Idaho</h1>
 </body>
 </html>
