Introduction to Programming

--- a/program1-1.html
+++ b/program1-1.html
@@ -7,6 +7,9 @@
     <title>Leandro Silva Pereira</title>
 </head>
 <body>
-    <h1>Leandro - Byu Idaho - Introduction to Programming</h1>
+    <h2>First Javascript</h2>
+    <button type="button" 
+    onclick="document.getElementById('demo').innerHTML = Date()">Click me to display Date and Time.</button>
+    <p id="demo"></p>
 </body>
 </html>
